# github-rest-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  githubrest_sdk.py  githubrest_types.py  pyproject.toml
py/core/: context.py  control.py
py/entity/: branch_entity.py  commit_entity.py  gist_entity.py  issue_entity.py  notification_entity.py  org_entity.py  pull_entity.py  rate_limit_entity.py  repo_entity.py  search_entity.py  user_entity.py
py/feature/: audit_feature.py  cache_feature.py  clienttrack_feature.py  debug_feature.py  log_feature.py  metrics_feature.py  paging_feature.py  proxy_feature.py  ratelimit_feature.py  streaming_feature.py  telemetry_feature.py  test_feature.py
py/test/: runner.py  test_branch_direct.py  test_branch_entity.py  test_commit_direct.py  test_commit_entity.py  test_exists.py  test_feature.py  test_gist_direct.py  test_gist_entity.py  test_issue_direct.py  test_issue_entity.py  test_netsim.py  test_notification_direct.py  test_notification_entity.py  test_org_direct.py  test_org_entity.py  test_pipeline.py  test_primary_utility.py  test_pull_direct.py  test_pull_entity.py  test_rate_limit_direct.py  test_rate_limit_entity.py  test_readme_examples.py  test_repo_direct.py  test_repo_entity.py  test_search_direct.py  test_search_entity.py  test_user_direct.py  test_user_entity.py
py/utility/: clean.py  feature_hook.py  feature_init.py  make_error.py  make_fetch_def.py  make_options.py  make_point.py  make_request.py  (+8 more)
(+630 files in other folders)
